--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Google Clone</title>
 </head>
 <body>
-    
+    <!--Menu de la cabecera de google-->
+  <header>
+    <nav class="Menu">
+        <ul>
+            <li><a href="#">Gmail</a></li>
+
+            <li><a href="#">Imagenes</a></li>
+
+            <li class="Menu-icon"> <img src="imagenes/Grid OIP.jpg"> <a href></a></li>
+
+            <li><a href><img src="imagenes/paco.jpg" alt="Usuario" </a></li>
+        </ul>
+    </nav>
+    <!--Contenido del navegador de Google-->
+    <main>
+        <section class="Icon Google"><img src="imagenes/Imagen de Google.jpg"</section>
+        <section class="main-inputcontainer">
+          <div class="main-inputcontainer">
+            <span class="Search-icon"> <img src="imagenes/icono de lupa.jpg">
+            </span>
+            <input type="text">
+            <a class="micro-icon" href=""><img src="imagenes/icono de microfono.jpg"></a>
+          </div>  
+        </section>
+    </main>
+
+  </header>
 </body>
 </html>
