Se anexo el fopter

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href><img src="imagenes/paco.jpg" alt="Usuario" </a></li>
         </ul>
     </nav>
+  </header>
     <!--Contenido del navegador de Google-->
     <main>
         <section class="Icon Google"><img src="imagenes/Imagen de Google.jpg"</section>
@@ -31,8 +32,40 @@
             <a class="micro-icon" href=""><img src="imagenes/icono de microfono.jpg"></a>
           </div>  
         </section>
+        <section class="Main Buttons">
+          <div>
+            <button>Buscar con Google</button>
+          </div>
+          <div>
+            <button>Voy a tener suerte</button>
+          </div>
+        </section>
     </main>
+    <footer> 
+      <ul class="footer left">
+        <li>
+          <a href="Sobre Google">Google</a>
+        </li>
+        <li>
+          <a href="Publicidad">Publicidad</a>
+        </li>
+        <li>
+          <a href="Negocios">Negocios</a>
+        </li>
+        <li>
+          <a href="Como funciona la busqueda">Como funciona la busqueda</a>
+        </li>
+      </ul>
+      <ul class="Footer-rigth">
+        <li>
+          <a href="Privacidas">Privacidad</a>
+        </li>
+        <li>
+          <a href="Condiciones">Condiciones</a>
+        </li>
+        <li><a href="Preferencias">Preferencias</a></li>
+      </ul>
 
-  </header>
+    </footer>
 </body>
-</html>
+</html>tttt
