Se anexo el estilo

--- a/index.html
+++ b/index.html
@@ -8,64 +8,74 @@
 </head>
 <body>
     <!--Menu de la cabecera de google-->
-  <header>
-    <nav class="Menu">
-        <ul>
-            <li><a href="#">Gmail</a></li>
-
-            <li><a href="#">Imagenes</a></li>
-
-            <li class="Menu-icon"> <img src="imagenes/Grid OIP.jpg"> <a href></a></li>
-
-            <li><a href><img src="imagenes/paco.jpg" alt="Usuario" </a></li>
-        </ul>
-    </nav>
+    <header>
+      <nav>
+          <ul class="nav-right-section">
+              <li>
+                  <a href="">Gmail</a>
+              </li>
+              <li>
+                  <a href="">Imágenes</a>
+              </li>
+              <li class="menu-icon">
+                  <a href=""></a>
+              </li>
+              <li>
+                  <a href="">
+                      <img src="imagenes/paco.jpg">
+                  </a>
+              </li>
+          </ul>
+      </nav>
   </header>
-    <!--Contenido del navegador de Google-->
-    <main>
-        <section class="Icon Google"><img src="imagenes/Imagen de Google.jpg"</section>
-        <section class="main-inputcontainer">
-          <div class="main-inputcontainer">
-            <span class="Search-icon"> <img src="imagenes/icono de lupa.jpg">
-            </span>
-            <input type="text">
-            <a class="micro-icon" href=""><img src="imagenes/icono de microfono.jpg"></a>
-          </div>  
-        </section>
-        <section class="Main Buttons">
-          <div>
+  <main>
+    <section class="main-logo">
+        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Icon">
+    </section>
+    <section class="main-input">
+        <div class="main-input-container">
+            <span class="search-icon"></span>
+                <input type="text">
+            <a class="micro-icon" href=""></a>   
+        </div>
+    </section>
+    <section class="main-buttons">
+        <div>
             <button>Buscar con Google</button>
-          </div>
-          <div>
-            <button>Voy a tener suerte</button>
-          </div>
-        </section>
-    </main>
-    <footer> 
-      <ul class="footer left">
-        <li>
-          <a href="Sobre Google">Google</a>
-        </li>
-        <li>
-          <a href="Publicidad">Publicidad</a>
-        </li>
-        <li>
-          <a href="Negocios">Negocios</a>
-        </li>
-        <li>
-          <a href="Como funciona la busqueda">Como funciona la busqueda</a>
-        </li>
-      </ul>
-      <ul class="Footer-rigth">
-        <li>
-          <a href="Privacidas">Privacidad</a>
-        </li>
-        <li>
-          <a href="Condiciones">Condiciones</a>
-        </li>
-        <li><a href="Preferencias">Preferencias</a></li>
-      </ul>
+            <div>
 
-    </footer>
-</body>
-</html>tttt
+            </div>
+            <button>Me siento con suerte</button>
+        </div>
+    </section>
+</main>
+<footer>
+  <ul class="footer-left">
+      <li>
+          <a href="">Publicidad</a>
+      </li>
+      <li>
+          <a href="">Negocios</a>
+      </li>
+      <li>
+          <a href="">Acerca de</a>
+      </li>
+      <li>
+          <a href="">Cómo funciona la búsqueda</a>
+      </li>
+  </ul>
+  <ul class="footer-right">
+      <li>                
+          <a href="">Privacidad</a>
+      </li>
+      <li>                
+          <a href="">Condiciones</a>
+      </li>
+      <li>
+          <a href="">Preferencias</a>
+      </li>
+  </ul>
+
+</footer>
+</body> 
+</html>
